feature(Event): implement event management functionalities including event creation, updating, and deletion; enhance EventView for improved user interaction and integrate event data handling in EventDAO and EventController